--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "graphql": "^0.13.2",
     "graphql-yoga": "^1.13.1",
     "ramda": "^0.25.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.4"
   }
 }
